tweaked few settings

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-controls">
             <button id="theme-toggle"><i class="fas fa-adjust"></i></button>
             <button id="refresh-feeds"><i class="fas fa-sync-alt"></i></button>
-            <select id="category-filter">
+            <select id="category-filter"><i class="fas fa-sync-alt"></i>
                 <option value="all">All Categories</option>
                 <option value="tech">Tech & Programming</option>
                 <option value="philosophy">Philosophy</option>
