updated favicon icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReadMyRSS</title>
+    <link rel="icon"  href="icon.jpg">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -16,11 +17,11 @@
             <button id="theme-toggle"><i class="fas fa-adjust"></i></button>
             <button id="refresh-feeds"><i class="fas fa-sync-alt"></i></button>
             <select id="category-filter"><i class="fas fa-sync-alt"></i>
-                <option value="all">All Categories</option>
                 <option value="tech">Tech & Programming</option>
                 <option value="philosophy">Philosophy</option>
                 <option value="art">Art & Creativity</option>
                 <option value="music">Music & Techno</option>
+                <option value="all">All Categories</option>
             </select>
         </div>
     </header>
